--- a/slides/slides1.Rmd
+++ b/slides/slides1.Rmd
@@ -7,6 +7,7 @@ output:
     css: "xaringan-themer.css" 
     nature:
         countIncrementalSlides: false
+        highlightLines: true
         ratio: 16:9
 ---
 
